Add tag for all codepoints as well as SQL statements for the major ones
It shall depend on com.tagperf.sampler. However for now the source is a symlink to the actual source of the dependency.

--- a/maven2/net/pom.xml
+++ b/maven2/net/pom.xml
@@ -40,6 +40,11 @@
       <version>ALPHA_VERSION</version>
       <optional>false</optional>
     </dependency>
+      <dependency>
+          <groupId>com.tagperf</groupId>
+          <artifactId>sampler</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
   </dependencies>
 
   <build>
