--- a/maven2/engine/pom.xml
+++ b/maven2/engine/pom.xml
@@ -58,4 +58,12 @@
     </plugins>
   </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.tagperf</groupId>
+            <artifactId>sampler</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
